--- a/DFN/LectureView.xib
+++ b/DFN/LectureView.xib
@@ -103,7 +103,7 @@
 							<object class="IBUILabel" id="346253700">
 								<reference key="NSNextResponder" ref="595386083"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{174, 10}, {119, 21}}</string>
+								<string key="NSFrame">{{182, 17}, {98, 21}}</string>
 								<reference key="NSSuperview" ref="595386083"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="51496714"/>
@@ -136,10 +136,10 @@
 							<object class="IBUILabel" id="1066469546">
 								<reference key="NSNextResponder" ref="595386083"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{19, 56}, {268, 21}}</string>
+								<string key="NSFrame">{{19, 67}, {268, 21}}</string>
 								<reference key="NSSuperview" ref="595386083"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="513228450"/>
+								<reference key="NSNextKeyView" ref="577583590"/>
 								<string key="NSReuseIdentifierKey">_NS:328</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -160,7 +160,7 @@
 							<object class="IBUILabel" id="51496714">
 								<reference key="NSNextResponder" ref="595386083"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{9, 33}, {161, 21}}</string>
+								<string key="NSFrame">{{9, 43}, {161, 21}}</string>
 								<reference key="NSSuperview" ref="595386083"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1066469546"/>
@@ -187,11 +187,32 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUILabel" id="513228450">
+								<reference key="NSNextResponder" ref="595386083"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{19, 17}, {162, 21}}</string>
+								<reference key="NSSuperview" ref="595386083"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="346253700"/>
+								<string key="NSReuseIdentifierKey">_NS:328</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Ilość wolnych miejsc:</string>
+								<reference key="IBUITextColor" ref="255201310"/>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<reference key="IBUIFontDescription" ref="411163363"/>
+								<reference key="IBUIFont" ref="79861289"/>
+							</object>
 						</array>
 						<string key="NSFrame">{{10, 163}, {300, 173}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="346253700"/>
+						<reference key="NSNextKeyView" ref="513228450"/>
 						<string key="NSReuseIdentifierKey">_NS:196</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -203,7 +224,7 @@
 					<object class="IBUILabel" id="77700583">
 						<reference key="NSNextResponder" ref="361054765"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{29, 25}, {264, 95}}</string>
+						<string key="NSFrame">{{20, 20}, {280, 100}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="176314841"/>
@@ -218,18 +239,18 @@
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<int key="IBUINumberOfLines">3</int>
+						<int key="IBUINumberOfLines">4</int>
 						<int key="IBUITextAlignment">1</int>
 						<int key="IBUILineBreakMode">0</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<string key="name">Helvetica-Bold</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">2</int>
-							<double key="pointSize">24</double>
+							<double key="pointSize">18</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">24</double>
+							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -321,7 +342,7 @@
 					<object class="IBUILabel" id="406695103">
 						<reference key="NSNextResponder" ref="361054765"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{39, 380}, {252, 83}}</string>
+						<string key="NSFrame">{{23, 378}, {276, 83}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="722862629"/>
@@ -331,7 +352,8 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">12:00 03.12.2012</string>
+						<string type="base64-UTF8" key="IBUIText">MDMuMTIuMjAxMiwgMjE6MDAgLSAxMjowMAowMy4xMi4yMDEyLCAyMTowMCAtIDEyOjAwCjAzLjEyLjIw
+MTIsIDIxOjAwIC0gMTI6MDA</string>
 						<reference key="IBUITextColor" ref="255201310"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -341,11 +363,11 @@
 							<string key="name">Helvetica</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">0</int>
-							<double key="pointSize">24</double>
+							<double key="pointSize">16</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">24</double>
+							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -377,31 +399,10 @@
 						<reference key="IBUIFontDescription" ref="972674156"/>
 						<reference key="IBUIFont" ref="9385188"/>
 					</object>
-					<object class="IBUILabel" id="513228450">
-						<reference key="NSNextResponder" ref="361054765"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{21, 172}, {162, 21}}</string>
-						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="577583590"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Ilość wolnych miejsc:</string>
-						<reference key="IBUITextColor" ref="255201310"/>
-						<nil key="IBUIHighlightedColor"/>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="411163363"/>
-						<reference key="IBUIFont" ref="79861289"/>
-					</object>
 					<object class="IBUILabel" id="577583590">
 						<reference key="NSNextResponder" ref="361054765"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{19, 247}, {161, 21}}</string>
+						<string key="NSFrame">{{19, 258}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845703726"/>
@@ -422,7 +423,7 @@
 					<object class="IBUILabel" id="845703726">
 						<reference key="NSNextResponder" ref="361054765"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{27, 268}, {276, 45}}</string>
+						<string key="NSFrame">{{27, 277}, {276, 45}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="37545517"/>
@@ -447,6 +448,7 @@
 						<string key="NSFrame">{{19, 670}, {280, 37}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -791,7 +793,6 @@
 							<reference ref="176314841"/>
 							<reference ref="662956418"/>
 							<reference ref="595386083"/>
-							<reference ref="513228450"/>
 							<reference ref="577583590"/>
 							<reference ref="845703726"/>
 							<reference ref="37545517"/>
@@ -831,11 +832,6 @@
 						<reference key="parent" ref="361054765"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">25</int>
-						<reference key="object" ref="513228450"/>
-						<reference key="parent" ref="361054765"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
 						<reference key="object" ref="577583590"/>
 						<reference key="parent" ref="361054765"/>
@@ -863,6 +859,7 @@
 							<reference ref="346253700"/>
 							<reference ref="1066469546"/>
 							<reference ref="51496714"/>
+							<reference ref="513228450"/>
 						</array>
 						<reference key="parent" ref="361054765"/>
 					</object>
@@ -924,6 +921,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">62</int>
 						<reference key="object" ref="51496714"/>
+						<reference key="parent" ref="595386083"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">25</int>
+						<reference key="object" ref="513228450"/>
 						<reference key="parent" ref="595386083"/>
 					</object>
 				</array>
