--- a/DFN/LectureView.xib
+++ b/DFN/LectureView.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">282</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -54,7 +53,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="200541395"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -76,7 +74,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 151}, {300, 76}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="348314720"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -113,7 +110,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{10, 179}, {298, 36}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1053678387"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="63226890"/>
@@ -132,7 +128,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 7}, {300, 132}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="457825599"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -156,7 +151,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 420}, {300, 77}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779921712"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -181,7 +175,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 238}, {300, 170}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="513228450"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -206,7 +199,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 509}, {300, 161}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="574153768"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -231,7 +223,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 694}, {300, 181}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="682770889"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -256,7 +247,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{191, 252}, {86, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="51496714"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -290,7 +280,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{27, 301}, {268, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="577583590"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -315,7 +304,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 279}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066469546"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -346,7 +334,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{25, 252}, {162, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="346253700"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -368,7 +355,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 20}, {280, 100}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="176314841"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -401,7 +387,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 13}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="77700583"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -422,7 +407,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{178, 125}, {112, 25}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="138959644"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -459,7 +443,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 426}, {93, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="702624350"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -481,7 +464,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{178, 483}, {112, 25}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="488842365"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -510,7 +492,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{19, 331}, {161, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845703726"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -532,7 +513,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{27, 350}, {276, 45}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="37545517"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -555,7 +535,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 803}, {280, 40}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="655450829"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -578,7 +557,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{179, 395}, {112, 25}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="117102454"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -604,7 +582,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{19, 515}, {45, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="108238455"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -626,7 +603,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{26, 536}, {270, 95}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="270859311"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -650,7 +626,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{27, 632}, {270, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="846610796"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -672,7 +647,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{178, 655}, {112, 25}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="729125166"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -698,7 +672,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 729}, {280, 45}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="351664532"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -720,7 +693,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 701}, {45, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="343486892"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -742,8 +714,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 842}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -772,7 +742,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{16, 774}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="207102666"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -795,7 +764,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 156}, {131, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="261655017"/>
 						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -816,7 +784,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{87, 811}, {25, 24}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="725390173"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">3</int>
@@ -832,7 +799,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{10, 451}, {298, 38}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="722862629"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="63226890"/>
@@ -850,7 +816,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 919}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="805493211"/>
 				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -1050,15 +1015,6 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">65</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">signIn:</string>
-						<reference key="source" ref="343486892"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">76</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1384,141 +1340,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">99</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">LectureView</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="addToWatched:">id</string>
-						<string key="showCalendar:">id</string>
-						<string key="showLecturers:">id</string>
-						<string key="showOnMap:">id</string>
-						<string key="signIn:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="addToWatched:">
-							<string key="name">addToWatched:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="showCalendar:">
-							<string key="name">showCalendar:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="showLecturers:">
-							<string key="name">showLecturers:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="showOnMap:">
-							<string key="name">showOnMap:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="signIn:">
-							<string key="name">signIn:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="datesTableView">UITableView</string>
-						<string key="datesTableViewBackground">UIButton</string>
-						<string key="dodanoLabel">UILabel</string>
-						<string key="eventFormLabel">UILabel</string>
-						<string key="mapButton">UIButton</string>
-						<string key="numberOfPlacesLabel">UILabel</string>
-						<string key="organisationLabel">UILabel</string>
-						<string key="placeCityLabel">UILabel</string>
-						<string key="placeLabel">UILabel</string>
-						<string key="scrollView">UIScrollView</string>
-						<string key="signinButton">UIButton</string>
-						<string key="signinImage">UIImageView</string>
-						<string key="signinLabel">UILabel</string>
-						<string key="tableView">UITableView</string>
-						<string key="tableViewBackground">UIButton</string>
-						<string key="titleLabel">UILabel</string>
-						<string key="viewBase">UIView</string>
-						<string key="watchButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="datesTableView">
-							<string key="name">datesTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="datesTableViewBackground">
-							<string key="name">datesTableViewBackground</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="dodanoLabel">
-							<string key="name">dodanoLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="eventFormLabel">
-							<string key="name">eventFormLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mapButton">
-							<string key="name">mapButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="numberOfPlacesLabel">
-							<string key="name">numberOfPlacesLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="organisationLabel">
-							<string key="name">organisationLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="placeCityLabel">
-							<string key="name">placeCityLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="placeLabel">
-							<string key="name">placeLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="scrollView">
-							<string key="name">scrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="signinButton">
-							<string key="name">signinButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="signinImage">
-							<string key="name">signinImage</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="signinLabel">
-							<string key="name">signinLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableView">
-							<string key="name">tableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableViewBackground">
-							<string key="name">tableViewBackground</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="viewBase">
-							<string key="name">viewBase</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="watchButton">
-							<string key="name">watchButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/LectureView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
